# glod-retired

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: app.rs  config.rs  main.rs  state.rs
src/components/: blank_space.rs  current_pace.rs  delta.rs  mod.rs  possible_time_save.rs  previous_segment.rs  splits.rs  sum_of_best.rs  timer.rs  title.rs  total_playtime.rs
src/formatters/: duration.rs  mod.rs  timespan.rs
src/splits/: earthbound.lss
src/styles/: app.css
src/util/: parser.rs
