[package]
name = "glod"
version = "0.1.0"
authors = ["William Volin <me@williamvolin.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
livesplit-core = "0.11.0"
livesplit-hotkey = "0.5.0"
num = "0.2.0"
glib = "0.9.1"
chrono = "0.4.9"

[dependencies.gtk]
version = "0.8.0"
features = ["v3_16"]


